src/test/resources/rules/success/SingleLineCommentCheck.java
package rules.success;

/**
 * This class demonstrates proper documentation using Javadoc.
 */
public class SingleLineCommentCheck {
    /**
     * This method uses proper Javadoc comment.
     */
    public void method() {
        String code = "some code";
        code.isEmpty();
        
        Integer value = 42;
        value.byteValue();
    }
}